--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/vchahun/iotbot/issues"
+  },
+  "dependencies": {
+    "express": "~4.13.1",
+    "socket.io": "~1.3.6",
+    "johnny-five": "~0.8.85"
   }
 }
